--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -13,6 +13,7 @@
         android:layout_weight="2"
         android:textColor="@android:color/black"
         android:textSize="16sp"
+        android:text="Country"
         android:textStyle="bold"
         tools:text="102,188" />
 
@@ -24,6 +25,7 @@
         android:background="@color/colorAccent" />
 
     <TextView
+        android:text="Conf."
         android:id="@+id/confirmedTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -42,6 +44,7 @@
         android:background="@color/colorAccent" />
 
     <TextView
+        android:text="Deaths"
         android:id="@+id/deathTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -60,6 +63,7 @@
         android:background="@color/colorAccent" />
 
     <TextView
+        android:text="Rec."
         android:id="@+id/recoveredTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
