--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:cornerRadius="5dp"
+        android:id="@+id/mytnBtn"
         android:gravity="left|center_vertical"
         android:text="Myth Busters"
         android:textAllCaps="false"
@@ -29,6 +30,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         app:cornerRadius="5dp"
+        android:id="@+id/maskBtn"
         android:textSize="18sp"
         app:strokeColor="@color/colorPrimaryDark"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
